# geometrylibrary

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-and-test.sh
pythonwrappers/: Angle.Wrapper.h  Angle.wrapper.cpp  CMakeLists.txt  Geometry.Wrapper.cpp  test_Angle.py  wrapper_class.h
src/: Angle.cpp  Angle.h  CMakeLists.txt  Constants.h  Length.cpp  Length.h  SharedMacros.h  Vector.h
utests/: AngleUT.cpp  CMakeLists.txt  LengthUT.cpp
